import "../Views/Web/c4-app";

export default class Connect4Web {

  constructor() {
    
  }

  init() {
    console.log('Connect4 Web');
  }

}